# djocketry-boiler

./: .env.dev  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.py  start_project.py
app/: settings.py
djocketry-boiler/: asgi.py  settings.py  urls.py  wsgi.py
