[tool.poetry]
name = "djocketry-boiler"
version = "0.2.0"
description = "Boilerplate for Django-Docker-Poetry projects"
authors = ["Chico Moura"]

[tool.poetry.dependencies]
python = "^3.10.6"
Django = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
